# entt_ext

./: CMakeLists.txt  README.md
src/: entt_ext.hpp
src/config/: types.hpp
src/relation/: relationship.hpp
src/system/: group.hpp  system.hpp
test/: CMakeLists.txt
test/src/: relationship_tests.cpp  system_tests.cpp
